--- a/README
+++ b/README
@@ -270,17 +270,18 @@ http://www.xansys.org -- ansys online community
 
 == Bugs and Problems ==
 
-C*** does no parameter substitution, neither the /SYS command; this
-is wrongly suggested in the highlighting of Ansys mode.
-A clearing of variables (VAR= ) is not taken into account
+C*** does no parameter substitution, neither the /SYS command; this is
+wrongly suggested in the variable highlighting of Ansys mode.  A
+clearing of variables (VAR= ) is not taken into account
 
-Ansys format line (multi-line) highlighting is brittle, please use
-M-o M-o to update the fontification in case the format line is not
-correctly highlighted
+Ansys format line (multi-line) highlighting is somewhat brittle,
+please use M-o M-o to update the fontification in case the format line
+is not correctly highlighted.
 
 The *END command is special: It needs 8 characters in all (+ 4
-whitespaces) before a comment character behind it is possible (see
-the Ansys 11.0 manual), this is not yet indicated in ansys-mode.
+whitespaces to differentiate it from *ENDIF) before a comment
+character behind it is accepted from the solver (please see the Ansys
+12.0 manual), this is not yet indicated in ansys-mode.
 
 === Getting help ===
 
@@ -299,5 +300,5 @@ the following options:
 
 * When you have already a (cost free) Google account you are able
   to issue a bug report at the Google Code hosted page
-  http://code.google.com/p/ansys-mode/issues/list.  On this site
+  http://code.google.com/p/ansys-mode/issues/list.  From this site
   you can also download the latest development version.
